project structure and loggin getup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 pandas
 numpy
 seaborn
+'''
+you can directly install setup.py or you can make it so whenever the rec.txt runs, it runs setup.py
+by adding the next line which automatically triggers the setup.py file                                                                                                                             
+'''
+-e .
